--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@sentry/nextjs": "^8.9.2",
+    "@sentry/nextjs": "^8.17.0",
     "@tanstack/react-table": "^8.17.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -32,6 +32,7 @@
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "node": "^18.17.0",
     "node-appwrite": "^12.0.1",
     "prettier": "^3.2.5",
     "react": "^18",
